// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListItem with expense 1`] = `
<div>
  <Link
    to="/edit/undefined"
  >
    <p>
      Gum
    </p>
  </Link>
  <p>
    $1.95
    -
    January 1st, 1970
  </p>
</div>
`;

exports[`should render ExpenseListItem with expense 2`] = `
<div>
  <Link
    to="/edit/undefined"
  >
    <p />
  </Link>
  <p>
    $0.00
    -
    May 5th, 2020
  </p>
</div>
`;
